# PPAR-M1

./: CMakeLists.txt
TP1/Eratosthene/: eratosthene.c
TP1/HelloWorld/: HelloWorld.c  HelloWorld.cpp
TP1/Matrix/: Matrix.c
TP1/Philosophers/: philosophers.c
